Making the game semi-responsive

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pong!</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div id="controls">
+      <button class="control-btn" id="tl-control-btn"></button>
+      <button class="control-btn" id="tr-control-btn"></button>
+      <button class="control-btn" id="bl-control-btn"></button>
+      <button class="control-btn" id="br-control-btn"></button>
+    </div>
     <div id="screen">
       <h1 id="title">PONG!</h1>
       <button id="play-btn">Play</button>
